# modern-osqp-cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
.github/workflows/: clang-format-check.yml  gcc.yml
cmake/: third_party.cmake  utils.cmake
conf/personalized_files/: CMakeUserPresets.json
conf/personalized_files/git_conf/: config
conf/personalized_files/git_conf/hooks/: pre-commit
src/: CMakeLists.txt  osqp_solver.hpp  qp_problem.hpp
src/sparse_matrix/: CMakeLists.txt  coo_matrix.hpp  csc_matrix.hpp  csr_matrix.hpp  lil_matrix.hpp  sparse_matrix.hpp
tests/: CMakeLists.txt  osqp_solver_test.cpp  qp_problem_test.cpp
tests/sparse_matrix/: CMakeLists.txt  coo_matrix_test.cpp  csc_matrix_test.cpp  csr_matrix_test.cpp  lil_matrix_test.cpp
